Added meta/og description to /kids.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,7 +36,7 @@ en:
   meta:
     kids_app:
       title:                                    "The Bible App for Kids"
-      description:                              "..."
+      description:                              "Meet the Bible App for Kids from YouVersion: animated Bible stories in a free app for smartphones and tablets. Learn, play, and grow in God’s Word. Coming late 2013: bible.com/kids"
     100million:
       title:                                    "It Starts with 100 Million"
       description:                              "The Bible App has been installed almost 100 million times - an incredible milestone! But we are just getting started. Download the free Bible App today - and then share the app with your friends. Let’s make history together."
