@@classvars aren't set per subclass, proper class instance vars for base moments controller and subclasses.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -270,6 +270,8 @@ en:
     cancel:                                     "Cancel"
     pop out:                                    "Pop out"
     none found:                                 "No notes found..."
+    create success:                             "Note saved"
+    create failure:                             "Error saving note"
     destroy success:                            "Note deleted"
     destroy failure:                            "Error deleting note"
   ref:
