Moved js templates, added reference link to moment verses to match native apps.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,6 +175,7 @@ en:
       friends text:                             "See your friends’ moments in the Bible."
       friends button:                           "Find friends"
     action:
+      go to scripture:                          "Go to scripture"
       load more:                                "Load more"
       like:                                     "Like"
       like title:                               "Like this"
