Massaging localization keys as requested by Anke and team.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -184,10 +184,14 @@ en:
       comment:                                  "Comment"
       comment title:                            "See all comments"
       edit:                                     "Edit"
-      edit title:                               "Edit this %{kind}"
+      edit highlight title:                     "Edit this highlight"
+      edit bookmark title:                      "Edit this bookmark"
+      edit note title:                          "Edit this note"
       delete:                                   "Delete"
       delete confirm:                           "Are you sure?"
-      delete title:                             "Delete this %{kind}"
+      delete highlight title:                   "Delete this highlight"
+      delete bookmark title:                    "Delete this bookmark"
+      delete note title:                        "Delete this note"
   notifications:
     title:                                      "Notifications"
     none:                                       "You don't have any notifications"
