Added friend status option for note create/edit.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -254,6 +254,7 @@ en:
     private:                                    "Private"
     is private:                                 "The requested note is private."
     draft:                                      "Draft"
+    friends:                                    "Friends"
     creation form errors:                       "The following error(s) prevented creation of your note:"
     status field:                               "Status:"
     reference field:                            "Reference(s):"
