--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,3 @@
----
 en:
   social:
     share:                                      "Share"
@@ -248,6 +247,11 @@ en:
       reference field:                          "Reference(s):"
       status field:                             "Status:"
       save button:                              "Save"
+    status:
+      private:                                  "Private"
+      public:                                   "Public"
+      friends:                                  "Friends only"
+      draft:                                    "Draft"
     list title:                                 "Notes"
     loading community:                          "Loading community notes..."
     no community notes:                         "No community notes referencing any selected verses were found. To create a note, select a verse in the Bible reader and then click the Selected button at the top of the reader."
