Pane js refactors, highlighting for bookmarks and notes too.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -719,6 +719,8 @@ en:
     destroy failure:                            "Error deleting highlight"
     creation error:                             "Sorry, couldn't highlight."
     delete error:                               "Sorry, couldn't remove highlighting."
+    form:
+      save button:                              "Save Highlight"
   searching:
     bible:                                      "Bible"
     plans:                                      "Plans"
