Add likes blurb/row to moment cards, not displaying comment/likes rows on detail page.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -201,6 +201,7 @@ en:
     destroy success:                            "Like deleted"
     destroy failure:                            "Your like could not be deleted"
   comments:
+    view all N:                                 "View all %{count} comments"
     post comment:                               "Post a comment"
     create success:                             "Comment posted"
     create failure:                             "Comment could not be posted"
